<resources>
    <string name="app_name">Vipuljadav</string>
    <string name="email">Email:</string>
    <string name="login">login</string>
    <string name="password">Password:</string>
    <string name="registration">Registration</string>
    <string name="user_name">User Name:</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="register">register</string>
    <string name="don_t_have_account">Don\'t have account</string>
    <string name="click_here">Click Here</string>
    <string name="already_have_account">Already have account</string>
    <string name="button">Button</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
</resources>