<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="#285759">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="73dp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="50sp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="#9E9E9E"
        android:textColorHint="#FF5722"
        android:textSize="49sp"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60sp"
        android:layout_marginTop="60sp"
        android:text="@string/user_name"
        android:textColor="#9E9E9E"
        android:textColorHint="#FF5722"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/uname"
        android:layout_width="300sp"
        android:layout_height="48dp"
        android:layout_marginStart="54sp"
        android:layout_marginTop="0sp"
        android:autofillHints=""
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TextFields" />

    <TextView
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60sp"

        android:text="@string/mobile_number"
        android:textColor="#9E9E9E"
        android:textColorHint="#FF5722"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/mnumber"
        android:layout_width="300sp"
        android:layout_height="48dp"
        android:layout_marginStart="54sp"
        android:layout_marginTop="0sp"
        android:autofillHints=""
        android:inputType="phone"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TextFields" />

    <TextView
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60sp"

        android:text="@string/email"
        android:textColor="#9E9E9E"
        android:textColorHint="#FF5722"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300sp"
        android:layout_height="48dp"
        android:layout_marginStart="54sp"
        android:layout_marginTop="0sp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60sp"
        android:layout_marginTop="0sp"
        android:text="@string/password"
        android:textColor="#9E9E9E"
        android:textColorHint="#FF5722"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/pwd"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55sp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="110sp"
        android:layout_marginTop="50sp"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/register12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#518FAC"
            android:text="@string/register"
            tools:ignore="ButtonStyle,UnusedAttribute,TouchTargetSizeCheck,TextContrastCheck" />


        <Button
            android:id="@+id/login"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:backgroundTint="#518FAC"
            android:text="@string/login"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck"
            tools:targetApi="lollipop" />
    </LinearLayout>
</LinearLayout>